[package]
name = "yume"
version = "0.1.0"
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
edition = "2018"

[dependencies]
aead = "0.2.0"
base64 = "0.11.0"
chacha20poly1305 = "0.3.1"
crossterm = "0.16.0"
futures = "0.3.4"
ring = "0.16.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
thiserror = "1.0.11"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]
