[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities"]
description = "Yume - An encrypted peer-to-peer UDP messaging terminal client"
edition = "2018"
exclude = ["docker-compose.yml", "registry", "rustfmt.toml"]
keywords = ["cli", "crypto", "network", "cryptography", "terminal", "networking", "encryption", "chat", "p2p", "messaging", "udp"]
license = "MIT"
name = "yume"
repository = "https://github.com/yamafaktory/yume"
version = "0.1.0"

[badges]
# https://github.com/rust-lang/crates.io/pull/1838

[dependencies]
aead = "0.2.0"
base64 = "0.12.0"
chacha20poly1305 = "0.4.1"
crossterm = "0.16.0"
futures = "0.3.4"
ring = "0.16.11"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
thiserror = "1.0.12"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'