[package]
authors = ["Davy Duperron <yamafaktory@gmail.com>"]
categories = ["command-line-utilities"]
description = "yume - An encrypted peer-to-peer IPv6 UDP messaging terminal client"
edition = "2018"
exclude = ["docker-compose.yml", "registry", "rustfmt.toml"]
keywords = ["cli", "crypto", "networking", "chat", "p2p"]
license = "MIT"
name = "yume"
repository = "https://github.com/yamafaktory/yume"
version = "0.1.0"

[badges]
# https://github.com/rust-lang/crates.io/pull/1838

[dependencies]
aead = "0.2.0"
base64 = "0.12.1"
chacha20poly1305 = "0.4.1"
crossterm = "0.17.4"
futures = "0.3.4"
lazy_static = "1.4.0"
ring = "0.16.13"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
structopt = "0.3"
thiserror = "1.0.16"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes", "unstable"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'